--- a/src/app/student-module/student-dashboard/student-dashboard.component.html
+++ b/src/app/student-module/student-dashboard/student-dashboard.component.html
@@ -13,15 +13,10 @@
                     </div>
                 </div>
                 <div class="row primary-navigation">
-                    <div class="col-12 d-flex menuItem" (click)="tabName='Home';activeNav = false;" routerLink="home" routerLinkActive="active-link">
-                        <img [class.visible]="tabName == 'Home'" src="../../assets/icon/IconhomeBlue.png" alt="HomeIcon">
+                    <div class="col-12 d-flex menuItem" (click)="tabName='Dashboard';activeNav = false;" routerLink="home" routerLinkActive="active-link">
+                        <img [class.visible]="tabName == 'Dashboard'" src="../../assets/icon/IconhomeBlue.png" alt="HomeIcon">
                         <img src="../../assets/icon/home.png" alt="HomeIcon">
-                        <label>Home</label>
-                    </div>
-                    <div class="col-12 d-flex menuItem" (click)="tabName='Search';activeNav = false;" routerLink="/user/search" routerLinkActive="active-link">
-                        <img [class.visible]="tabName == 'Search'" src="../../assets/icon/IconsearchBlue.png" alt="HomeIcon">
-                        <img src="../../assets/icon/IconWhiteSearch.png" alt="SearchIcon">
-                        <label>Search</label>
+                        <label>Dashboard</label>
                     </div>
                     <div class="col-12 d-flex menuItem" (click)="tabName='Post Question';activeNav = false;" routerLink="post-question" routerLinkActive="active-link">
                         <img [class.visible]="tabName == 'Post Question'" src="../../assets/icon/IconlearnBlue.png" alt="HomeIcon">
@@ -33,28 +28,18 @@
                         <img src="../../assets/icon/IconwhiteEngage.png" alt="EngageIcon">
                         <label>My Questions</label>
                     </div>
-                    <div class="col-12 d-flex menuItem" (click)="tabName='Rate';activeNav = false;" routerLink="/user/rate" routerLinkActive="active-link">
-                        <img [class.visible]="tabName == 'Rate'" src="../../assets/icon/IconrateBlue.png" alt="RateIcon">
+                    <div class="col-12 d-flex menuItem" (click)="tabName='My Ratings';activeNav = false;" routerLink="rating" routerLinkActive="active-link">
+                        <img [class.visible]="tabName == 'My Ratings'" src="../../assets/icon/IconrateBlue.png" alt="RateIcon">
                         <img src="../../assets/icon/IconwhiteRate.png" alt="RateIcon">
                         <label>My Ratings</label>
-                    </div>
-                    <div class="col-12 d-flex menuItem" (click)="tabName='Community';activeNav = false;" routerLink="/user/community" routerLinkActive="active-link">
-                        <img [class.visible]="tabName == 'Community'" src="../../assets/icon/community.svg" alt="CommunityIcon">
-                        <img src="../../assets/icon/community_white.svg" alt="CommunityIcon">
-                        <label>Community</label>
                     </div>
                 </div>
                 <!-- mt-auto -->
                 <div class="pb-3">
-                    <div class="col-12 d-flex menuItem line-top" (click)="tabName='Feedback';activeNav = false;" routerLink="/user/feedback" routerLinkActive="active-link">
+                    <div class="col-12 d-flex menuItem line-top" (click)="tabName='Feedback';activeNav = false;" routerLink="feedback" routerLinkActive="active-link">
                         <img [class.visible]="tabName == 'Feedback'" src="../../assets/icon/IconfeedbackBlue.png" alt="FeedbackIcon">
                         <img src="../../assets/icon/IconwhiteFeedback.png" alt="FeedbackIcon">
                         <label>Feedbacks</label>
-                    </div>
-                    <div class="col-12 d-flex menuItem" (click)="tabName='Settings';activeNav = false;" routerLink="/user/settings" routerLinkActive="active-link">
-                        <img [class.visible]="tabName == 'Settings'" src="../../assets/icon/IconsettingBlue.png" alt="settingIcon">
-                        <img src="../../assets/icon/IconwhiteSetting.png" alt="settingIcon">
-                        <label>Settings</label>
                     </div>
                 </div>
             </div>
