--- a/src/app/student-module/student-home/student-home.component.html
+++ b/src/app/student-module/student-home/student-home.component.html
@@ -3,25 +3,49 @@
         <div class="col-lg-4 col-sm-6">
             <div class="card" style="width: 18rem;">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="card-link">Card link</a>
-                  <a href="#" class="card-link">Another link</a>
+                  <h5 class="card-title text-center">Total Question</h5>
+                  <!-- <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6> -->
+                  <p class="card-text text-lg-center">{{totalQues?.length}}</p>
+                  <!-- <a href="#" class="card-link">Card link</a>
+                  <a href="#" class="card-link">Another link</a> -->
                 </div>
               </div>
         </div>
         <div class="col-lg-4 col-sm-6">
             <div class="card" style="width: 18rem;">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="card-link">Card link</a>
-                  <a href="#" class="card-link">Another link</a>
+                  <h5 class="card-title text-center">Total Completed Ques</h5>
+                  <!-- <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6> -->
+                  <p class="card-text text-center">{{totalQues?.length - newquestion?.length}}</p>
+                  <!-- <a href="#" class="card-link">Card link</a>
+                  <a href="#" class="card-link">Another link</a> -->
                 </div>
               </div>
         </div>
         <div class="col-lg-4 col-sm-6"></div>
+    </div>
+  
+    <div class="row mt-5">
+      <h4>List of Top 5 Tutors on our Platform</h4>
+      <div class="col-12">
+        <table class="table table-info">
+          <thead>
+            <tr>
+              <th scope="col">#</th>
+              <th scope="col">Name</th>
+              <th scope="col">Specialization</th>
+              <th scope="col">Rating</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let tutor of tutorList; index as i;">
+              <th scope="row">{{i+1}}</th>
+              <td>{{tutor.firstName}} {{tutor.lastName}}</td>
+              <td>{{tutor.subjectName}}</td>
+              <td>⭐⭐⭐⭐</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
 </div>
